# ure

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.h.in  ure_config.h.in
.github/workflows/: cmake-emsdk.yml  cmake-multi-platform.yml
cmake/: embc.cmake  emsbc.cmake  glfw3.cmake  glm.cmake  imgui.cmake  libsigc++.cmake  libwebsocket.cmake  lock-free.cmake  stb.cmake
examples/: CMakeLists.txt  ure_ogl.cpp
include/: config.h  ure_animation.h  ure_application.h  ure_application_events.h  ure_buffer.h  ure_camera.h  ure_canvas.h  ure_common_defs.h  ure_font.h  ure_font_loader.h  ure_fragment_shader.h  ure_handled_object.h  ure_image.h  ure_message.h  ure_monitor.h  ure_object.h  ure_position.h  ure_program.h  ure_programs_collector.h  ure_rect.h  ure_renderer.h  ure_resources_collector.h  ure_resources_fetcher.h  ure_resources_fetcher_events.h  ure_scene_camera_node.h  ure_scene_graph.h  ure_scene_layer_node.h  ure_scene_node.h  ure_scene_node_base.h  ure_shader_object.h  ure_size.h  ure_text.h  ure_texture.h  ure_transformations_matrix.h  ure_utils.h  ure_vertex_shader.h  ure_view_port.h  ure_websocket.h  ure_websocket_events.h  ure_websocket_options.h  (+4 more)
include/font/: ure_free_type_font.h  ure_free_type_font_loader.h
include/images/: images.h
include/widgets/: ure_button.h  ure_label.h  ure_layer.h  ure_widget.h
resources/web/: index.html
src/: ure_application.cpp  ure_camera.cpp  ure_image.cpp  ure_message.cpp  ure_programs_collector.cpp  ure_resources_collector.cpp  ure_scene_layer_node.cpp  ure_scene_node.cpp  ure_texture.cpp  ure_utils.cpp  ure_window.cpp
src/backend/: ure_canvas_ogl.cpp  ure_program_ogl.cpp  ure_renderer_ogl.cpp  ure_scene_graph_ogl.cpp  ure_shader_object_ogl.cpp  ure_texture_ogl.cpp  ure_view_port_ogl.cpp
src/font/: ure_free_type_font.cpp  ure_free_type_font_loader.cpp
src/images/: devil.c  freeimage.c  images.h  libav++.cpp  stb.c
src/imp/: ure_application_emscripten.cpp  ure_application_generic.cpp  ure_resources_fetcher_emscripten.cpp  ure_resources_fetcher_generic.cpp  ure_websocket_emscripten.cpp  ure_websocket_generic.cpp
src/widgets/: ure_button.cpp  ure_label.cpp  ure_layer.cpp  ure_widget.cpp
src/wm/: ure_application_glfw.cpp  ure_monitor_glfw.cpp  ure_window_events_glfw.cpp  ure_window_glfw.cpp
